; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/openpam/bin/pamtest/extr_pamtest.c_pt_authenticate.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/openpam/bin/pamtest/extr_pamtest.c_pt_authenticate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@silent = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"pam_authenticate()\00", align 1
@pamh = common dso_local global i32 0, align 4
@PAM_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @pt_authenticate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pt_authenticate(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @silent, align 4
  %5 = load i32, i32* %2, align 4
  %6 = or i32 %5, %4
  store i32 %6, i32* %2, align 4
  %7 = call i32 @pt_verbose(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %8 = load i32, i32* @pamh, align 4
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @pam_authenticate(i32 %8, i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @PAM_SUCCESS, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @pt_error(i32 %14, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  br label %16

16:                                               ; preds = %13, %1
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}

declare dso_local i32 @pt_verbose(i8*) #1

declare dso_local i32 @pam_authenticate(i32, i32) #1

declare dso_local i32 @pt_error(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
